--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,159 +2,249 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity"
     android:orientation="vertical">
-
-    <TextView android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/tv1"
-        android:layout_marginTop="30dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="配方名稱:"
-        android:id="@+id/tv1"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="30dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Pname"
-        android:id="@+id/tv2"
-        android:layout_alignTop="@+id/tv1"
-        android:layout_toEndOf="@+id/tv1"
-        android:layout_marginStart="40dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="配方編號:"
-        android:id="@+id/tv3"
-        android:layout_below="@+id/tv1"
-        android:layout_alignStart="@+id/tv1"
-        android:layout_marginTop="30dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Pcode"
-        android:id="@+id/tv4"
-        android:layout_alignBottom="@+id/tv3"
-        android:layout_alignStart="@+id/tv2" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="物料名稱:"
-        android:id="@+id/tv5"
-        android:layout_below="@+id/tv3"
-        android:layout_alignStart="@+id/tv3"
-        android:layout_marginTop="30dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Iname"
-        android:id="@+id/tv6"
-        android:layout_alignTop="@+id/tv5"
-        android:layout_alignStart="@+id/tv4" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="物料編號:"
-        android:id="@+id/tv7"
-        android:layout_below="@+id/tv5"
-        android:layout_alignStart="@+id/tv5"
-        android:layout_marginTop="30dp" />
-
-
     <TableLayout
-        android:id="@+id/TL"
-        android:background="@color/gray"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true">
-        <com.example.tenny.monitor.ScrollForeverTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/abc_text_size_display_1_material"
-            android:textColor="@color/black"
-            android:text="Large Text"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:singleLine="true"
-            android:focusable="true"
-            android:id="@+id/msg"/>
+        android:layout_height="match_parent"
+        android:id="@+id/table1"
+        android:stretchColumns="*"
+        android:background="@color/gray">
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/row1"
+            android:layout_margin="10dp"
+            android:background="@color/gray"
+            android:layout_weight="1"
+            android:stretchColumns="*">
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:background="@color/background"
+                android:layout_weight="1">
+                <TextView android:text="@string/hello_world"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:id="@+id/textView"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignStart="@+id/tv1"
+                    android:layout_marginTop="30dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="配方名稱:"
+                    android:id="@+id/tv1"
+                    android:layout_below="@+id/textView"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="60dp"
+                    android:layout_marginTop="30dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="配方編號:"
+                    android:id="@+id/tv3"
+                    android:layout_below="@+id/tv1"
+                    android:layout_alignStart="@+id/tv1"
+                    android:layout_marginTop="30dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="物料名稱:"
+                    android:id="@+id/tv5"
+                    android:layout_below="@+id/tv3"
+                    android:layout_alignStart="@+id/tv3"
+                    android:layout_marginTop="30dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="物料編號:"
+                    android:id="@+id/tv7"
+                    android:layout_below="@+id/tv5"
+                    android:layout_alignStart="@+id/tv5"
+                    android:layout_marginTop="30dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Pname"
+                    android:id="@+id/tv2"
+                    android:layout_alignTop="@+id/tv1"
+                    android:layout_toEndOf="@+id/tv1"
+                    android:layout_marginStart="40dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Pcode"
+                    android:id="@+id/tv4"
+                    android:layout_alignBottom="@+id/tv3"
+                    android:layout_alignStart="@+id/tv2" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Iname"
+                    android:id="@+id/tv6"
+                    android:layout_alignTop="@+id/tv5"
+                    android:layout_alignStart="@+id/tv4" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Icode"
+                    android:id="@+id/tv10"
+                    android:layout_alignBottom="@+id/tv7"
+                    android:layout_alignStart="@+id/tv6" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Not connected"
+                    android:id="@+id/connectState"
+                    android:textColor="@color/red"
+                    android:layout_alignTop="@+id/textView"
+                    android:layout_alignStart="@+id/tv2" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="數量:"
+                    android:id="@+id/tv12"
+                    android:layout_below="@+id/tv7"
+                    android:layout_alignStart="@+id/tv5"
+                    android:layout_marginTop="30dp" />
+
+                <ImageView
+                    android:layout_width="400dp"
+                    android:layout_height="150dp"
+                    android:id="@+id/imageView"
+                    android:src="@drawable/test"
+                    android:layout_below="@+id/tv12"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="7dp"
+                    android:scaleType="centerCrop" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="0"
+                    android:id="@+id/count"
+                    android:layout_alignTop="@+id/tv12"
+                    android:layout_alignStart="@+id/tv10" />
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:background="@color/background"
+                android:layout_weight="1">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="品牌:"
+                    android:id="@+id/tv11"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginTop="30dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="目前無換牌指令"
+                    android:id="@+id/swapTitle"
+                    android:textColor="@color/dark_gray"
+                    android:layout_below="@id/tv11"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginStart="30dp" />
+                <SeekBar
+                    android:id="@+id/myseek"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:clickable="false"
+                    android:max="100"
+                    android:progress="3"
+                    android:progressDrawable="@color/gray"
+                    android:thumb="@drawable/slider"
+                    android:layout_below="@+id/swapTitle"
+                    android:layout_alignStart="@+id/swapTitle"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="60dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/abc_text_size_display_1_material"
+                    android:text="Brand Name"
+                    android:id="@+id/brandName"
+                    android:layout_toEndOf="@+id/tv11"
+                    android:layout_alignBottom="@+id/tv11"
+                    android:layout_marginStart="30dp"
+                    android:textColor="#000000" />
+            </RelativeLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="3dp"
+                android:background="@color/background"
+                android:layout_weight="1">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="材料資訊"
+                    android:id="@+id/textView2"
+                    android:layout_marginTop="30dp"
+                    android:layout_gravity="center_horizontal" />
+
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/scrollView"
+                    android:layout_gravity="center_horizontal" >
+
+                    <ListView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/listView" />
+                </ScrollView>
+            </LinearLayout>
+        </TableRow>
+        <TableRow
+            android:background="@color/gray">
+            <com.example.tenny.monitor.ScrollForeverTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/abc_text_size_display_1_material"
+                android:text="this is marquee~"
+                android:textColor="@color/black"
+                android:ellipsize="marquee"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:singleLine="true"
+                android:focusable="true"
+                android:id="@+id/msg"/>
+        </TableRow>
     </TableLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Icode"
-        android:id="@+id/tv10"
-        android:layout_alignBottom="@+id/tv7"
-        android:layout_alignStart="@+id/tv6" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Not connected"
-        android:id="@+id/connectState"
-        android:textColor="@color/red"
-        android:layout_alignTop="@+id/textView"
-        android:layout_alignStart="@+id/tv2" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:src="@drawable/test"
-        android:layout_below="@+id/tv10"
-        android:layout_alignStart="@+id/tv10"
-        android:layout_marginTop="10dp"/>
-
-    <SeekBar
-        android:id="@+id/myseek"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:clickable="false"
-        android:max="100"
-        android:progressDrawable="@color/gray"
-        android:thumb="@drawable/slider"
-        android:layout_alignBottom="@+id/tv6"
-        android:layout_toEndOf="@+id/imageView"
-        android:layout_marginStart="100dp"
-        android:layout_marginEnd="60dp"
-        android:layout_alignTop="@+id/tv4" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="向右滑動切換品牌"
-        android:id="@+id/textView2"
-        android:layout_alignTop="@+id/tv2"
-        android:layout_alignStart="@+id/myseek"
-        android:layout_marginStart="60dp"/>
 
 </RelativeLayout>
