--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,131 +23,15 @@
                 android:layout_height="match_parent"
                 android:background="@color/background"
                 android:layout_weight="1">
-                <TextView android:text="@string/hello_world"
+
+                <ListView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:id="@+id/textView"
+                    android:id="@+id/listView2"
                     android:layout_alignParentTop="true"
-                    android:layout_alignStart="@+id/tv1"
+                    android:layout_centerHorizontal="true"
                     android:layout_marginTop="30dp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="配方名稱:"
-                    android:id="@+id/tv1"
-                    android:layout_below="@+id/textView"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginStart="60dp"
-                    android:layout_marginTop="30dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="配方編號:"
-                    android:id="@+id/tv3"
-                    android:layout_below="@+id/tv1"
-                    android:layout_alignStart="@+id/tv1"
-                    android:layout_marginTop="30dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="物料名稱:"
-                    android:id="@+id/tv5"
-                    android:layout_below="@+id/tv3"
-                    android:layout_alignStart="@+id/tv3"
-                    android:layout_marginTop="30dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="物料編號:"
-                    android:id="@+id/tv7"
-                    android:layout_below="@+id/tv5"
-                    android:layout_alignStart="@+id/tv5"
-                    android:layout_marginTop="30dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Pname"
-                    android:id="@+id/tv2"
-                    android:layout_alignTop="@+id/tv1"
-                    android:layout_toEndOf="@+id/tv1"
-                    android:layout_marginStart="40dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Pcode"
-                    android:id="@+id/tv4"
-                    android:layout_alignBottom="@+id/tv3"
-                    android:layout_alignStart="@+id/tv2" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Iname"
-                    android:id="@+id/tv6"
-                    android:layout_alignTop="@+id/tv5"
-                    android:layout_alignStart="@+id/tv4" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Icode"
-                    android:id="@+id/tv10"
-                    android:layout_alignBottom="@+id/tv7"
-                    android:layout_alignStart="@+id/tv6" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Not connected"
-                    android:id="@+id/connectState"
-                    android:textColor="@color/red"
-                    android:layout_alignTop="@+id/textView"
-                    android:layout_alignStart="@+id/tv2" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="數量:"
-                    android:id="@+id/tv12"
-                    android:layout_below="@+id/tv7"
-                    android:layout_alignStart="@+id/tv5"
-                    android:layout_marginTop="30dp" />
-
-                <ImageView
-                    android:layout_width="400dp"
-                    android:layout_height="150dp"
-                    android:id="@+id/imageView"
-                    android:src="@drawable/test"
-                    android:layout_below="@+id/tv12"
-                    android:layout_marginTop="20dp"
-                    android:layout_alignStart="@+id/tv7"
-                    android:scaleType="centerCrop" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="0"
-                    android:id="@+id/count"
-                    android:layout_alignTop="@+id/tv12"
-                    android:layout_alignStart="@+id/tv10" />
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="0dp"
@@ -163,6 +47,26 @@
                     android:id="@+id/tv11"
                     android:layout_marginStart="30dp"
                     android:layout_marginTop="30dp" />
+
+                <TextView android:text="@string/hello_world"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:id="@+id/textView"
+                    android:layout_below="@id/tv11"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginStart="30dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Not connected"
+                    android:id="@+id/connectState"
+                    android:textColor="@color/red"
+                    android:layout_alignTop="@+id/textView"
+                    android:layout_centerHorizontal="true" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -170,7 +74,7 @@
                     android:text="目前無換牌指令"
                     android:id="@+id/swapTitle"
                     android:textColor="@color/dark_gray"
-                    android:layout_below="@id/tv11"
+                    android:layout_below="@id/textView"
                     android:layout_marginTop="30dp"
                     android:layout_marginStart="30dp" />
                 <SeekBar
