--- a/app/src/main/res/layout/my_list_item.xml
+++ b/app/src/main/res/layout/my_list_item.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="100dp"
+    android:layout_height="110dp"
     android:padding="6dip" >
 
     <ImageView
@@ -10,9 +10,20 @@
         android:layout_marginRight="6dip"
         android:contentDescription="TODO"
         android:src="@drawable/test"
-        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:scaleType="center" />
+        android:scaleType="center"
+        android:layout_below="@+id/firstLine" />
+
+    <TextView
+        android:id="@+id/itemCount"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:layout_alignTop="@+id/textView3"
+        android:layout_toEndOf="@+id/textView3"
+        android:textSize="20sp"
+        android:textColor="#000000"
+        android:layout_marginStart="20dp" />
 
     <TextView
         android:id="@+id/secondLine"
@@ -21,9 +32,9 @@
         android:layout_below="@+id/firstLine"
         android:singleLine="true"
         android:text="0-0000000000"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="#000000"
-        android:layout_marginLeft="5dp" />
+        android:layout_marginStart="5dp" />
 
     <TextView
         android:id="@+id/firstLine"
@@ -31,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_alignWithParentIfMissing="true"
         android:text="Example application"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:textColor="#000000" />
@@ -44,18 +55,7 @@
         android:layout_below="@+id/secondLine"
         android:layout_alignParentStart="true"
         android:textColor="#000000"
-        android:textSize="20dp"
-        android:layout_marginLeft="5dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0"
-        android:id="@+id/count"
-        android:layout_alignTop="@+id/textView3"
-        android:layout_toEndOf="@+id/textView3"
-        android:textSize="20dp"
-        android:textColor="#000000"
-        android:layout_marginLeft="20dp" />
+        android:textSize="20sp"
+        android:layout_marginStart="5dp" />
 
 </RelativeLayout>
