--- a/app/src/main/res/layout/my_list_item.xml
+++ b/app/src/main/res/layout/my_list_item.xml
@@ -43,6 +43,7 @@
         android:layout_alignWithParentIfMissing="true"
         android:text="Example application"
         android:textSize="30sp"
+        android:singleLine="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:textColor="#000000" />
