--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -270,25 +270,56 @@
                 android:background="@color/background"
                 android:layout_weight="1">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="材料資訊"
-                    android:id="@+id/textView2"
-                    android:layout_marginTop="30dp"
-                    android:layout_gravity="center_horizontal" />
-
-                <!--<ScrollView
+                <TabHost
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/scrollView"
-                    android:layout_gravity="center_horizontal" > -->
-                    <ListView
+                    android:layout_height="fill_parent"
+                    android:id="@+id/tabHost"
+                    android:layout_gravity="center_horizontal">
+
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/listView" />
-                <!--</ScrollView>-->
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <TabWidget
+                            android:id="@android:id/tabs"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+
+                        <FrameLayout
+                            android:id="@android:id/tabcontent"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <LinearLayout
+                                android:orientation="vertical"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:id="@+id/tab1layout">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="?android:attr/textAppearanceLarge"
+                                    android:text="This is tab 1"
+                                    android:id="@+id/textView2"
+                                    android:layout_gravity="center_horizontal" />
+                            </LinearLayout>
+                            <LinearLayout
+                                android:orientation="vertical"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:id="@+id/tab2layout">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="?android:attr/textAppearanceLarge"
+                                    android:text="This is tab 2"
+                                    android:id="@+id/textView6"
+                                    android:layout_gravity="center_horizontal" />
+                            </LinearLayout>
+                        </FrameLayout>
+                    </LinearLayout>
+                </TabHost>
             </LinearLayout>
         </TableRow>
         <TableRow
