--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,7 +95,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/abc_text_size_display_1_material"
-                    android:text="Brand Name"
+                    android:text="尚無資料"
                     android:id="@+id/brandName"
                     android:textColor="#000000"
                     android:layout_above="@+id/textView"
@@ -273,6 +273,16 @@
                     android:layout_alignTop="@+id/int1"
                     android:layout_alignStart="@+id/textView5"
                     android:layout_toStartOf="@+id/int1" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="看板名稱"
+                    android:id="@+id/board_id"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="5dp" />
 
             </RelativeLayout>
             <LinearLayout
