--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Not connected"
+                    android:text="尚未連線"
                     android:id="@+id/connectState"
                     android:textColor="@color/red"
                     android:layout_alignTop="@+id/textView"
