--- a/app/src/main/res/layout/id_changer.xml
+++ b/app/src/main/res/layout/id_changer.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content" android:layout_height="wrap_content">
+    android:layout_width="360dp" android:layout_height="240dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -42,7 +42,7 @@
         android:layout_marginLeft="60dp" />
 
     <Spinner
-        android:layout_width="wrap_content"
+        android:layout_width="35dp"
         android:layout_height="wrap_content"
         android:id="@+id/numberSelect"
         android:layout_alignBottom="@+id/nameSelect"
