--- a/app/src/main/res/layout/id_changer.xml
+++ b/app/src/main/res/layout/id_changer.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="360dp" android:layout_height="240dp">
+    android:layout_width="450dp" android:layout_height="240dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -76,4 +76,22 @@
         android:layout_alignTop="@+id/button"
         android:layout_toEndOf="@+id/button"
         android:layout_marginLeft="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="檢查秒數"
+        android:id="@+id/textView14"
+        android:layout_marginLeft="60dp"
+        android:layout_alignTop="@+id/number"
+        android:layout_toEndOf="@+id/numberSelect" />
+
+    <Spinner
+        android:layout_width="54dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/echoLimitSelector"
+        android:layout_marginRight="20dp"
+        android:layout_alignTop="@+id/nameSelect"
+        android:layout_alignStart="@+id/textView14" />
 </RelativeLayout>
